--- a/jobs/static/jobs/style.css
+++ b/jobs/static/jobs/style.css
@@ -96,3 +96,69 @@ a.nav-link:hover {
 .top-link:hover {
   font-weight: bolder;
 }
+
+/*
+=============
+Thought bubble
+=============
+*/
+
+i.far.fa-comment-dots.fa-6x {
+  color: var(--clr-grey-2) !important;
+}
+
+.thought-container {
+  position: relative;
+}
+
+.thought-container:hover .thought-bubble {
+  opacity: 0.05;
+}
+
+.thought-container:hover .thought-overlay {
+  opacity: 1;
+}
+
+.thought-bubble {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+  -webkit-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+@media screen and (max-width: 992px) {
+  .thought-bubble {
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+}
+
+.thought-overlay {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 20%;
+  left: 0;
+  text-align: center;
+}
+
+.inner-text {
+  color: var(--bs-gray-dark);
+  font-size: 1.05rem;
+  font-family: cursive;
+}
+
+.inner-text a {
+  text-decoration: none;
+  color: var(--bs-gray-dark);
+  font-weight: bolder;
+  text-shadow: 0 0.05rem 2.1rem rgba(20, 0, 0, 30%);
+}
