added local settings to django, removed trash

--- a/wwhitsett/templates/base.html
+++ b/wwhitsett/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Fozzy Bear">
     <meta name="generator" content="Hugo 0.79.0">
+
     <title>Portfolio</title>
 
     <!-- font awesome -->
@@ -20,6 +21,7 @@
     <meta name="theme-color" content="#7952b3">
 
     {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'jobs/style.css' %}">
 </head>
 
