--- a/wwhitsett/templates/base.html
+++ b/wwhitsett/templates/base.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Fozzy Bear">
-    <meta name="generator" content="Hugo 0.79.0">
+    <meta name="author" content="WWhitsett Portfolio">
+    <meta name="generator" content="Portfolio">
 
     <title>Portfolio</title>
 
@@ -114,85 +114,98 @@
                 <div class="row bg-dark text-white mx-0 rounded-2">
                     <div class="col text-center display-4">Technologies</div>
                     <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-5">writeability</div>
-                        <div class="col-5">readability</div>
+                        <div class="col-lg-2 col-4"></div>
+                        <div class="col-lg-5 col-4">writeability</div>
+                        <div class="col-lg-5 col-4">readability</div>
                     </div>
                     <div class="row">
-                        <div class="col-2">tech1</div>
-                        <div class="col-5">
+                        <div class="col-lg-2 col-4 techs">Python</div>
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-success" style="width: 80%;"></div>
                             </div>
                         </div>
-                        <div class="col-5">
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-success" style="width: 60%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-2">tech2</div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-success" style="width: 90%;"></div>
                             </div>
                         </div>
-                        <div class="col-5">
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-success" style="width: 40%;"></div>
-                            </div>
-                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-2">tech3</div>
-                        <div class="col-5">
+                        <div class="col-lg-2 col-4 techs">Django</div>
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-success" style="width: 50%;"></div>
+                                <div class="progress-bar bg-success" style="width: 70%;"></div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-success" style="width: 70%;"></div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-2">tech4</div>
-                        <div class="col-5">
+                        <div class="col-lg-2 col-4 techs">JS/HTML</div>
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-success" style="width: 80%;"></div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-success" style="width: 30%;"></div>
+                                <div class="progress-bar bg-success" style="width: 85%;"></div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-2">tech5</div>
-                        <div class="col-5">
+                        <div class="col-lg-2 col-4 techs">CSS/<small>Bootstrap</small></div>
+                        <div class="col-lg-5 col-4">
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-success" style="width: 80%;"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-4">
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-success" style="width: 85%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-2 col-4 techs">Java</div>
+                        <div class="col-lg-5 col-4">
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-success" style="width: 40%;"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-4">
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-success" style="width: 60%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-2 col-4 techs">C++</div>
+                        <div class="col-lg-5 col-4">
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-success" style="width: 20%;"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-success" style="width: 50%;"></div>
                             </div>
                         </div>
-                        <div class="col-5">
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-2 col-4 techs">Perl</div>
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-success" style="width: 90%;"></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-2">tech6</div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-4">
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-success" style="width: 30%;"></div>
-                            </div>
-                        </div>
-                        <div class="col-5">
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-success" style="width: 60%;"></div>
+                                <div class="progress-bar bg-success" style="width: 90%;"></div>
                             </div>
                         </div>
                     </div>
@@ -205,7 +218,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header bg-dark text-white">
-                        <h4 class="d-inline modal-title">Recent activity...</h4>
+                        <h4 class="d-inline modal-title">Recent Activity...</h4>
                         <button class="close past-close bg-transparent border-0 text-white" data-dismiss="modal">
                             <i class="fas fa-times fa-2x"></i>
                         </button>
@@ -222,20 +235,21 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header bg-dark text-white">
-                        <h4 class="d-inline modal-title">Recent study...</h4>
+                        <h4 class="d-inline modal-title">Recent Study...</h4>
                         <button class="close study-close bg-transparent border-0 text-white" data-dismiss="modal">
                             <i class="fas fa-times fa-2x"></i>
                         </button>
                     </div>
                     <div class="modal-body bg-light">
                         <ul class="list-group">
-                            <li class="list-group-item">Algo - Python</li>
-                            <li class="list-group-item">Udemy - Java</li>
-                            <li class="list-group-item">Udemy - Javascript</li>
-                            <li class="list-group-item">Udemy - Angular</li>
-                            <li class="list-group-item">Udemy - Bootstrap</li>
-                            <li class="list-group-item">Udemy - Django</li>
-                            <li class="list-group-item">Toptal - Python</li>
+                            <li class="list-group-item">Algo Expert - Algorithms Certficate in Python</li>
+                            <li class="list-group-item">Udemy Academy - Java Masterclass</li>
+                            <li class="list-group-item">Udemy Academy - Javascript</li>
+                            <li class="list-group-item">Udemy Academy - Angular</li>
+                            <li class="list-group-item">Udemy Academy - Bootstrap</li>
+                            <li class="list-group-item">Udemy Academy - Django</li>
+                            <li class="list-group-item">Udemy Academy - Graph Theory</li>
+                            <li class="list-group-item">Toptal - Python Concurrency</li>
                         </ul>
                     </div>
                 </div>
@@ -249,7 +263,7 @@
             <p class="float-end mb-1">
                 <a class="top-link" href="#">Back to top</a>
             </p>
-            <p>Copyright &copy; WW <span>{% now "Y" %}</span></p>
+            <p>Copyright &copy; Wendi Whitsett <span>{% now "Y" %}</span></p>
         </div>
     </footer>
 
