changed mouseout to over

--- a/wwhitsett/templates/base.html
+++ b/wwhitsett/templates/base.html
@@ -71,7 +71,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main-section">
 
         <section class="text-center container container-fluid" id="section-head">
             <div class="row">
