--- a/wwhitsett/templates/base.html
+++ b/wwhitsett/templates/base.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-lg-2 mx-auto d-flex align-self-end">
                     <div class="thought-container">
-                        <img src="{% static 'thought.svg' %}" alt="" class="thought-bubble">
+                        <img src="{% static 'thought.jpg' %}" alt="" class="thought-bubble">
                         <div class="thought-overlay">
                             <div class="inner-text"><a id="past-info" href="#section-head">What has Wendi been up to lately?</a></div>
                         </div>
