added resume and cleaned up unused code

--- a/wwhitsett/templates/base.html
+++ b/wwhitsett/templates/base.html
@@ -62,8 +62,11 @@
                             </a>
                         </div>
                         <div class="px-sm-3">
-                            <!-- <a class="nav-link" href="{% static 'Fake-Resume.pdf' %}">Resume</a> -->
-                            <a id="resume-link" class="nav-link text-uppercase lead resume" href="#">Resume</a>
+                            <a
+                            id="resume-link"
+                            class="nav-link text-uppercase lead resume"
+                            target="_blank"
+                            href="{% static 'NewResume.pdf' %}">Resume</a>
                         </div>
                     </div>
                 </div>
@@ -84,7 +87,11 @@
                     class="img img-fluid"
                     style="box-shadow: 0 2px 5px rgba(0, 0, 0, 70%);">
                     <p class="lead text-muted pt-2">Hi there! I'm a software engineer with 18+ years of experience and looking for my next grand adventure in the industry. Check out my most recent work below or simply download my resume up top.</p>
-                    <div class="pt-0 pb-2"><a href="mailto:hosjev@gmail.com" class="btn btn-primary my-2">Email Me</a></div>
+                    <div class="pt-0 pb-2"><a
+                        href="mailto:hosjev@gmail.com"
+                        class="btn btn-primary my-2"
+                        target="_blank">Email Me</a>
+                    </div>
                 </div>
                 <div class="col-lg-2 mx-auto d-flex align-self-end">
                     <div class="thought-container">
